# Crustation-Station

./: .gitignore  404.html  Cargo.toml  Challenges.md  Makefile  README.md  TODO.md  cs-app-33c1abd2be18c32c.js  cs-app-33c1abd2be18c32c_bg.wasm  cs-app-66fb6a1e6c49368.js  cs-app-66fb6a1e6c49368_bg.wasm  cs-app-8dcdab25364e6db8.js  cs-app-8dcdab25364e6db8_bg.wasm  cs-app-963d7a15f995fa28.js  cs-app-963d7a15f995fa28_bg.wasm  cs-app-97178adc2f67cd37.js  cs-app-97178adc2f67cd37_bg.wasm  cs-app-98e1d3e3658f95b2.js  cs-app-98e1d3e3658f95b2_bg.wasm  cs-app-bc70f41f79b9c2ce.js  cs-app-bc70f41f79b9c2ce_bg.wasm  cs-app-bcfc8fcd4f39b818.js  cs-app-bcfc8fcd4f39b818_bg.wasm  cs-app-c83c7093bca0a75b.js  cs-app-c83c7093bca0a75b_bg.wasm  cs-app-d6ea2d9b106f04f4.js  cs-app-d6ea2d9b106f04f4_bg.wasm  cs-app-f4d0d47569998d42.js  cs-app-f4d0d47569998d42_bg.wasm  index.html  style-561c5a13d83c2dfe.css  tailwind.config.js
.github/workflows/: gh-pages-deploy.yml
src/: app.rs  components.rs  features.rs  input.css  lib.rs  main.rs
src/app/: detail.rs  layout.rs  list.rs  state.rs
src/app/list/: navigation.rs
src/components/: code_result.rs  copy_button.rs  form.rs  toolbar.rs
src/features/: json.rs  uuid.rs
