[package]
name = "cs-app"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
gloo-console = "0.3.0"
gloo-storage = "0.3.0"
leptos = { version = "0.8.12", features = ["csr"] }
leptos-shadcn-button = "0.9.0"
leptos-shadcn-checkbox = "0.9.0"
leptos-shadcn-combobox = "0.9.0"
leptos-shadcn-input = "0.9.0"
leptos-shadcn-label = "0.9.0"
leptos-shadcn-select = "0.9.1"
leptos-shadcn-switch = "0.9.0"
leptos-shadcn-textarea = "0.9.0"
leptos-shadcn-tooltip = "0.9.0"
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
serde_json = "1.0.145"
web-sys = { version = "0.3.82", features = ["Window", "Navigator", "Clipboard"]}

