[package]
name = "cs-app"
version = "0.1.0"
edition = "2024"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
gloo-storage = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.8.12", features = ["csr"] }
leptos-shadcn-button = "0.9.0"
leptos-shadcn-checkbox = "0.9.0"
leptos-shadcn-combobox = "0.9.0"
leptos-shadcn-input = "0.9.0"
leptos-shadcn-label = "0.9.0"
leptos-shadcn-textarea = "0.9.0"
leptos_meta = "0.8.5"
leptos_router = "0.8.9"
serde_json = "1.0.145"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["Window", "Navigator", "Clipboard"]}
strum = { version = "0.27", features = ["derive"] }

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "js",
]

[package.metadata.leptos]
lib-profile-release = "wasm-release"
